Purging of old backups made to FTP or SSH servers is now supported, for FTP servers that use Unix directory listings and SSH servers that allow commands to be run.
---- Changes since 3.59 ----
Updated the Piwik script installer to version 0.2.5, ZenPhoto to 1.1.7, eTicket to 1.7.2, Joomla to 1.5.4, Drupal to 6.3 and 6.8, phpBB to 3.0.2, phpMyAdmin to 2.11.7.1, WordPress to 2.6, Zikula to 1.0.1, phpScheduleIt to 1.2.10, OpenX to 2.6.0, PiWik to 0.2.7, MoinMoin to 1.7.1, MediaWiki to 1.12.0 and HelpCenter to 2.1.7.
Added a Module Config field for a custom command to get memory and swap information.
Included domains can now be specified when editing SPF information, and IP networks can be entered.
The default limit on the number of non-alias domains can now be set in server templates.
Added a script installer for Z-push, which implements the Microsoft activesync protocol.
DNS aliases named 'webmail' and 'admin' are now created in all new virtual servers by default, and Apache is configured to redirect requests for them to Usermin and Webmin by default.
Added the Global Variables page under the System Customization category, for creating variables that can be used in all templates.
If the virus scanner fails to return a response within 30 seconds, email will be delivered normally. This avoids problems with the procmail timeout, which can cause even non-infected email to be dropped if clamav is too slow.
---- Changes since 3.60 ----
Updated the Piwik script installer to version 0.2.9, phpCOIN to 1.4.4, and Drupal to 5.9.
When the virtualmin --help command is run, it now outputs a list of all available API commands with short descriptions, broken down into categories.
Extra administrators can now have contact email addresses, which can be used when sending email to all domain owners. These can be set via the web interface, or the command-line API.