@@ -1,0 +1,10 @@
+<header>Path to create API helper command</header>
+
+By default, Virtualmin will create the <tt>virtualmin</tt> command-line API
+helper script in the <tt>/usr/sbin</tt> or <tt>/usr/local/sbin</tt> directory,
+depending on which is writable on your system. However, this configuration
+field can be used to select a different location, such as
+<tt>/opt/bin/virtualmin</tt> that is appropriate for your site. <p>
+
+<footer>
+
