@@ -959,3 +959,4 @@ If the virus scanner fails to return a response within 30 seconds, email will be
 Updated the Piwik script installer to version 0.2.9, phpCOIN to 1.4.4, and Drupal to 5.9.
 When the virtualmin --help command is run, it now outputs a list of all available API commands with short descriptions, broken down into categories.
 Extra administrators can now have contact email addresses, which can be used when sending email to all domain owners. These can be set via the web interface, or the command-line API.
+Added a Module Config option in the advanced section to change the path for the API helper command, and improved automatic selection of a path if the default directory /usr/sbin is not writable.
